--- a/src/cheat/cheat.vcxproj
+++ b/src/cheat/cheat.vcxproj
@@ -210,8 +210,8 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>$(VC_IncludePath);$(WindowsSDK_IncludePath);C:\Program Files (x86)\Microsoft DirectX SDK (June 2010)\Include;C:\Users\tore\Documents\vcpkg\installed\x64-windows-static\include;C:\vcpkg-master\installed\x64-windows-static\include</IncludePath>
-    <LibraryPath>$(VC_LibraryPath_x64);$(WindowsSDK_LibraryPath_x64);C:\Program Files (x86)\Microsoft DirectX SDK (June 2010)\Lib\x64;C:\Users\tore\Documents\vcpkg\installed\x64-windows-static\debug\lib;C:\vcpkg-master\installed\x64-windows-static\debug\lib</LibraryPath>
+    <IncludePath>$(VC_IncludePath);$(WindowsSDK_IncludePath);C:\Program Files (x86)\Microsoft DirectX SDK (June 2010)\Include;D:\vcpkg\installed\x64-windows-static\include</IncludePath>
+    <LibraryPath>$(VC_LibraryPath_x64);$(WindowsSDK_LibraryPath_x64);C:\Program Files (x86)\Microsoft DirectX SDK (June 2010)\Lib\x64;D:\vcpkg\installed\x64-windows-static\debug\lib</LibraryPath>
     <TargetName>GitHub-Desktop</TargetName>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='DebugPerformance|Win32'">
@@ -328,8 +328,8 @@
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <UACExecutionLevel>RequireAdministrator</UACExecutionLevel>
-      <AdditionalLibraryDirectories>%(AdditionalLibraryDirectories);$(ProjectDir)lib/x64/debug;C:\vcpkg-master\installed\x64-windows-static\debug\lib;C:\vcpkg-master\installed\x64-windows-static\debug\lib</AdditionalLibraryDirectories>
-      <AdditionalDependencies>%(AdditionalDependencies);$(ProjectDir)lib\x64\debug\*.lib;C:\vcpkg-master\installed\x64-windows-static\debug\lib\*.lib</AdditionalDependencies>
+      <AdditionalLibraryDirectories>%(AdditionalLibraryDirectories);$(ProjectDir)lib/x64/debug;D:\vcpkg\installed\x64-windows-static\debug\lib</AdditionalLibraryDirectories>
+      <AdditionalDependencies>%(AdditionalDependencies);$(ProjectDir)lib\x64\debug\*.lib;D:\vcpkg\installed\x64-windows-static\debug\lib\*.lib</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='DebugPerformance|Win32'">
@@ -717,23 +717,6 @@
     <ClCompile Include="include\clipper\clipper.cpp" />
     <ClCompile Include="include\imgui\imgui_freetype.cpp" />
     <ClCompile Include="loader\loader.cpp" />
-    <ClCompile Include="lua-v2\custom_structs.cpp" />
-    <ClCompile Include="lua-v2\json.cpp" />
-    <ClCompile Include="lua-v2\logger.cpp" />
-    <ClCompile Include="lua-v2\register\register_config.cpp" />
-    <ClCompile Include="lua-v2\register\register_debug_overlay.cpp" />
-    <ClCompile Include="lua-v2\register\register_enums.cpp" />
-    <ClCompile Include="lua-v2\register\register_feature_types.cpp" />
-    <ClCompile Include="lua-v2\register\register_global_tables.cpp" />
-    <ClCompile Include="lua-v2\register\register_lua_only_types.cpp" />
-    <ClCompile Include="lua-v2\register\register_lua_types.cpp" />
-    <ClCompile Include="lua-v2\register\register_math_types.cpp" />
-    <ClCompile Include="lua-v2\register\register_menu.cpp" />
-    <ClCompile Include="lua-v2\register\register_sdk_types.cpp" />
-    <ClCompile Include="lua-v2\state.cpp" />
-    <ClCompile Include="lua-v2\sdk_download.cpp" />
-    <ClCompile Include="lua-v2\test\test_entity_list.cpp" />
-    <ClCompile Include="lua-v2\lua_web_client.cpp" />
     <ClCompile Include="menu\console.cpp" />
     <ClCompile Include="menu\framework\components\components.cpp" />
     <ClCompile Include="menu\framework\components\c_component.cpp" />
@@ -941,16 +924,6 @@
     <ClInclude Include="include\stb_image.hpp" />
     <ClInclude Include="loader\loader.hpp" />
     <ClInclude Include="logger.hpp" />
-    <ClInclude Include="lua-v2\cancelable.hpp" />
-    <ClInclude Include="lua-v2\custom_structs.hpp" />
-    <ClInclude Include="lua-v2\exception.hpp" />
-    <ClInclude Include="lua-v2\json.hpp" />
-    <ClInclude Include="lua-v2\lua_web_client.hpp" />
-    <ClInclude Include="lua-v2\lua_def.hpp" />
-    <ClInclude Include="lua-v2\logger.hpp" />
-    <ClInclude Include="lua-v2\state.hpp" />
-    <ClInclude Include="lua-v2\sdk_download.hpp" />
-    <ClInclude Include="lua-v2\test\test.hpp" />
     <ClInclude Include="menu\console.hpp" />
     <ClInclude Include="menu\framework\animations.hpp" />
     <ClInclude Include="menu\framework\animation_state_t.hpp" />
